--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Inventaire Poplab - Protégé</title>
     <link rel="stylesheet" href="style.css"> <!-- Assurez-vous que style.css est présent -->
     <style>
-        /* Ajout de styles temporaires si style.css manque */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -17,13 +16,39 @@
         }
         #loginForm, #mainContent {
             margin: 20px;
+            width: 80%;
+            max-width: 500px;
         }
         #mainContent {
             display: none;
         }
-        #errorMessage {
+        button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        input[type="text"], input[type="number"] {
+            padding: 8px;
+            margin: 5px 0;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .errorMessage {
             color: red;
             display: none;
+        }
+        .inventoryItem {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+            border-bottom: 1px solid #ccc;
+            padding: 5px 0;
         }
     </style>
 </head>
@@ -34,84 +59,138 @@
         <h2>Accès protégé</h2>
         <input type="password" id="passwordInput" placeholder="Mot de passe">
         <button id="loginButton">Se connecter</button>
-        <p id="errorMessage">Mot de passe incorrect.</p>
+        <p class="errorMessage" id="errorMessage">Mot de passe incorrect.</p>
     </div>
 
     <!-- Contenu protégé -->
     <div id="mainContent">
         <h1>Bienvenue sur l'inventaire Poplab</h1>
         <h2>Inventaire :</h2>
-        <ul id="inventoryList"></ul>
+        <div id="inventory"></div>
+
+        <h2>Ajouter un nouvel article :</h2>
+        <input type="text" id="newItemName" placeholder="Nom de l'article">
+        <input type="number" id="newItemQuantity" placeholder="Quantité" min="1">
+        <button id="addItemButton">Ajouter</button>
     </div>
 
     <script>
         // Configuration JSONBin
         const PASSWORD_BIN_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6"; // URL de votre bin
-        const ACCESS_KEY = "$2a$10$CK7kuKd1eFHbsVtOb88Jbu4vIKYO5oTKnHfu2t0L.vVU2DP/wHcmW"; // Votre clé d'accès
+        const ACCESS_KEY = "$2a$10$CK7kuKd1eFHbsVtOb88Jbu4vIKYO5oTKnHfu2t0L.vVU2DP/wHcmW"; // Clé d'accès
+        const MASTER_KEY = "$2a$10$C2IpRYDMnBVS09UziRhWsuPTWBDUAY3bghoT9Fz9cORd/9QFWGhiW"; // Clé pour modifier le bin
 
-        // Fonction pour récupérer les données du bin JSONBin
+        let inventory = [];
+
+        // Fonction pour récupérer les données du bin
         async function fetchBinData() {
             try {
                 const response = await fetch(PASSWORD_BIN_URL, {
                     method: "GET",
-                    headers: {
-                        "X-Access-Key": ACCESS_KEY,
-                    },
+                    headers: { "X-Access-Key": ACCESS_KEY },
                 });
-
-                if (!response.ok) {
-                    console.error("Erreur réseau :", response.status, response.statusText);
-                    return null;
-                }
-
                 const data = await response.json();
-                return data.record; // Retourne les données stockées dans le bin
+                return data.record; // Retourne les données du bin
             } catch (error) {
                 console.error("Erreur lors de la récupération des données :", error);
                 return null;
             }
         }
 
-        // Fonction pour vérifier le mot de passe
-        async function verifyPassword(userInputPassword) {
-            const binData = await fetchBinData();
-            if (!binData) return false; // Erreur dans la récupération des données
-
-            const storedPassword = binData.password;
-            return userInputPassword === storedPassword; // Vérifie si les mots de passe correspondent
+        // Fonction pour sauvegarder les données dans JSONBin
+        async function saveBinData(updatedData) {
+            try {
+                await fetch(PASSWORD_BIN_URL, {
+                    method: "PUT",
+                    headers: {
+                        "Content-Type": "application/json",
+                        "X-Master-Key": MASTER_KEY,
+                    },
+                    body: JSON.stringify(updatedData),
+                });
+            } catch (error) {
+                console.error("Erreur lors de la sauvegarde des données :", error);
+            }
         }
 
         // Fonction pour afficher l'inventaire
-        function displayInventory(inventory) {
-            const inventoryList = document.getElementById("inventoryList");
-            inventoryList.innerHTML = ""; // Réinitialise l'affichage
+        function displayInventory() {
+            const inventoryDiv = document.getElementById("inventory");
+            inventoryDiv.innerHTML = ""; // Réinitialise l'affichage
 
             inventory.forEach((item) => {
-                const listItem = document.createElement("li");
-                listItem.textContent = `${item.name} - Quantité : ${item.quantity}`;
-                inventoryList.appendChild(listItem);
+                const itemDiv = document.createElement("div");
+                itemDiv.className = "inventoryItem";
+
+                const name = document.createElement("span");
+                name.textContent = item.name;
+
+                const quantityInput = document.createElement("input");
+                quantityInput.type = "number";
+                quantityInput.value = item.quantity;
+                quantityInput.min = 0;
+                quantityInput.addEventListener("change", () => {
+                    item.quantity = parseInt(quantityInput.value);
+                    saveBinData({ password: "123456", inventory }); // Sauvegarde
+                });
+
+                const deleteButton = document.createElement("button");
+                deleteButton.textContent = "Supprimer";
+                deleteButton.addEventListener("click", () => {
+                    inventory = inventory.filter((i) => i.id !== item.id);
+                    saveBinData({ password: "123456", inventory }); // Sauvegarde
+                    displayInventory();
+                });
+
+                itemDiv.appendChild(name);
+                itemDiv.appendChild(quantityInput);
+                itemDiv.appendChild(deleteButton);
+                inventoryDiv.appendChild(itemDiv);
             });
+        }
+
+        // Fonction pour ajouter un nouvel article
+        function addItem() {
+            const newItemName = document.getElementById("newItemName").value.trim();
+            const newItemQuantity = parseInt(document.getElementById("newItemQuantity").value);
+
+            if (!newItemName || isNaN(newItemQuantity) || newItemQuantity <= 0) {
+                alert("Veuillez entrer un nom et une quantité valide.");
+                return;
+            }
+
+            const newItem = {
+                id: Date.now(),
+                name: newItemName,
+                quantity: newItemQuantity,
+            };
+
+            inventory.push(newItem);
+            saveBinData({ password: "123456", inventory }); // Sauvegarde
+            displayInventory();
+
+            // Réinitialise les champs
+            document.getElementById("newItemName").value = "";
+            document.getElementById("newItemQuantity").value = "";
         }
 
         // Gestionnaire d'événement pour le bouton de connexion
         document.getElementById("loginButton").addEventListener("click", async () => {
             const userPassword = document.getElementById("passwordInput").value.trim();
+            const binData = await fetchBinData();
 
-            // Vérification du mot de passe
-            const isPasswordCorrect = await verifyPassword(userPassword);
-
-            if (isPasswordCorrect) {
-                const binData = await fetchBinData(); // Récupère toutes les données
+            if (binData && binData.password === userPassword) {
+                inventory = binData.inventory;
                 document.getElementById("loginForm").style.display = "none"; // Cache le formulaire
                 document.getElementById("mainContent").style.display = "block"; // Affiche le contenu protégé
-
-                // Affiche l'inventaire
-                displayInventory(binData.inventory);
+                displayInventory();
             } else {
-                const errorMessage = document.getElementById("errorMessage");
-                errorMessage.style.display = "block"; // Affiche le message d'erreur
+                document.getElementById("errorMessage").style.display = "block"; // Affiche un message d'erreur
             }
         });
+
+        // Gestionnaire d'événement pour le bouton "Ajouter"
+        document.getElementById("addItemButton").addEventListener("click", addItem);
     </script>
 </body>
 </html>
