--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventaire Poplab - Protégé</title>
-    <!-- Charger bcrypt.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcrypt.js/2.4.3/bcrypt.min.js"></script>
+    <!-- Inclure bcrypt.js depuis un fichier local -->
+    <script src="./bcrypt.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,9 +67,11 @@
     </div>
 
     <script>
+        // Configuration JSONBin
         const PASSWORD_BIN_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6";
         const ACCESS_KEY = "$2a$10$CK7kuKd1eFHbsVtOb88Jbu4vIKYO5oTKnHfu2t0L.vVU2DP/wHcmW";
 
+        // Fonction pour récupérer les données JSONBin
         async function fetchBinData() {
             try {
                 const response = await fetch(PASSWORD_BIN_URL, {
@@ -84,6 +86,7 @@
             }
         }
 
+        // Fonction pour vérifier le mot de passe
         async function verifyPassword(userInputPassword) {
             const binData = await fetchBinData();
             if (!binData) {
@@ -96,7 +99,7 @@
             console.log("Mot de passe saisi :", userInputPassword);
 
             try {
-                // Vérification avec bcrypt.js
+                // Vérifie le mot de passe avec bcrypt.js
                 return bcrypt.compareSync(userInputPassword, storedPasswordHash);
             } catch (error) {
                 console.error("Erreur lors de la vérification avec bcrypt :", error);
@@ -104,6 +107,7 @@
             }
         }
 
+        // Gestionnaire d'événement pour le bouton de connexion
         document.getElementById("loginButton").addEventListener("click", async () => {
             const userPassword = document.getElementById("passwordInput").value.trim();
             const isPasswordCorrect = await verifyPassword(userPassword);
