--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventaire Poplab - Protégé</title>
     <!-- Inclure bcrypt.js depuis un fichier local -->
-    <script src="./bcrypt.min.js"></script>
+    <script src="./assets/bcrypt.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
