--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventaire Poplab - Protégé</title>
-    <!-- Inclure bcryptjs depuis cdnjs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js" integrity="sha512-DNI/FJdkfyeuPUal7lDkRVg0mFY2n4IZJJYqPbQWLL0COxLi6G6nmf5gr1vW1Bd4wYC09hOvZVsSclfXxUTU/w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <title>Inventaire Poplab</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,47 +51,125 @@
     </style>
 </head>
 <body>
+    <!-- Formulaire de connexion -->
     <div id="loginForm">
         <h1>Inventaire Poplab</h1>
         <h2>Connexion</h2>
-        <input type="password" id="passwordInput" placeholder="Entrez le mot de passe">
         <button id="loginButton">Se connecter</button>
-        <p id="errorMessage" class="errorMessage">Mot de passe incorrect.</p>
     </div>
 
-    <div id="mainContent" style="display: none;">
+    <!-- Contenu principal (Inventaire) -->
+    <div id="mainContent">
         <h1>Bienvenue sur l'inventaire</h1>
         <div id="inventory"></div>
+
+        <h2>Ajouter un article</h2>
+        <input type="text" id="newItemName" placeholder="Nom de l'article">
+        <input type="number" id="newItemQuantity" placeholder="Quantité" min="1">
+        <button id="addItemButton">Ajouter</button>
     </div>
 
     <script>
-        async function verifyPassword(userInputPassword) {
-            const storedPasswordHash = "$2a$12$tnU1PgyA8b7rkkszzeuJ1OFBUAAujTdOHidifdyP3QM4yd.lwKsvm"; // Haché enregistré
+        // Simuler un inventaire avec des articles stockés localement
+        let inventoryItems = [];
 
-            console.log("Haché récupéré :", storedPasswordHash);
-            console.log("Mot de passe saisi :", userInputPassword);
+        // Fonction pour afficher l'inventaire
+        function loadInventory() {
+            const inventoryDiv = document.getElementById('inventory');
+            inventoryDiv.innerHTML = ''; // Réinitialiser l'affichage
 
-            try {
-                const result = bcrypt.compareSync(userInputPassword, storedPasswordHash);
-                console.log("Résultat de la vérification :", result);
-                return result;
-            } catch (error) {
-                console.error("Erreur lors de la vérification avec bcryptjs :", error);
-                return false;
-            }
+            inventoryItems.forEach(item => {
+                createItemElement(item.id, item.name, item.quantity);
+            });
         }
 
-        document.getElementById("loginButton").addEventListener("click", async () => {
-            const userPassword = document.getElementById("passwordInput").value.trim();
-            const isPasswordCorrect = await verifyPassword(userPassword);
+        // Fonction pour créer un élément d'article
+        function createItemElement(id, name, quantity) {
+            const inventoryDiv = document.getElementById('inventory');
+            const itemDiv = document.createElement('div');
+            itemDiv.className = 'item';
+            itemDiv.id = id;
 
-            if (isPasswordCorrect) {
-                document.getElementById("loginForm").style.display = "none";
-                document.getElementById("mainContent").style.display = "block";
-            } else {
-                document.getElementById("errorMessage").style.display = "block";
+            const nameDisplay = document.createElement('span');
+            nameDisplay.textContent = name;
+            itemDiv.appendChild(nameDisplay);
+
+            // Bouton pour diminuer la quantité
+            const decrementButton = document.createElement('button');
+            decrementButton.textContent = '-';
+            decrementButton.onclick = () => updateQuantity(id, -1);
+            itemDiv.appendChild(decrementButton);
+
+            // Affichage de la quantité
+            const quantityDisplay = document.createElement('span');
+            quantityDisplay.textContent = ` ${quantity} `;
+            quantityDisplay.className = 'quantity';
+            itemDiv.appendChild(quantityDisplay);
+
+            // Bouton pour augmenter la quantité
+            const incrementButton = document.createElement('button');
+            incrementButton.textContent = '+';
+            incrementButton.onclick = () => updateQuantity(id, 1);
+            itemDiv.appendChild(incrementButton);
+
+            // Bouton pour supprimer un article
+            const deleteButton = document.createElement('button');
+            deleteButton.textContent = 'Supprimer';
+            deleteButton.onclick = () => deleteItem(id);
+            itemDiv.appendChild(deleteButton);
+
+            inventoryDiv.appendChild(itemDiv);
+        }
+
+        // Fonction pour ajouter un nouvel article
+        function addItem() {
+            const newItemName = document.getElementById('newItemName').value.trim();
+            const newItemQuantity = parseInt(document.getElementById('newItemQuantity').value);
+
+            if (!newItemName || isNaN(newItemQuantity) || newItemQuantity <= 0) {
+                alert("Veuillez entrer un nom et une quantité valide.");
+                return;
             }
+
+            const newItem = {
+                id: Date.now(), // Utilisation de l'horodatage comme identifiant unique
+                name: newItemName,
+                quantity: newItemQuantity
+            };
+
+            inventoryItems.push(newItem);
+            createItemElement(newItem.id, newItem.name, newItem.quantity);
+            document.getElementById('newItemName').value = '';
+            document.getElementById('newItemQuantity').value = '';
+        }
+
+        // Fonction pour mettre à jour la quantité d'un article
+        function updateQuantity(id, change) {
+            const item = inventoryItems.find(item => item.id === id);
+            if (!item) {
+                console.error("Article non trouvé");
+                return;
+            }
+
+            item.quantity = Math.max(0, item.quantity + change); // Empêche la quantité négative
+            loadInventory(); // Recharge l'inventaire pour mettre à jour l'affichage
+        }
+
+        // Fonction pour supprimer un article
+        function deleteItem(id) {
+            inventoryItems = inventoryItems.filter(item => item.id !== id);
+            loadInventory(); // Recharge l'inventaire pour mettre à jour l'affichage
+        }
+
+        // Lier l'événement de clic au bouton "Se connecter" pour afficher le contenu principal
+        document.getElementById("loginButton").addEventListener("click", function() {
+            document.getElementById("loginForm").style.display = "none";
+            document.getElementById("mainContent").style.display = "block";
+            loadInventory(); // Charger l'inventaire au démarrage
         });
+
+        // Lier l'événement de clic au bouton "Ajouter" pour ajouter un nouvel article
+        document.getElementById("addItemButton").addEventListener("click", addItem);
     </script>
 </body>
 </html>
