--- a/index.html
+++ b/index.html
@@ -2,174 +2,148 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventaire Poplab</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        #loginForm {
-            max-width: 400px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            background-color: #fff;
-        }
-        #mainContent {
-            display: none;
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            background-color: #fff;
-        }
-        input, button {
-            display: block;
-            width: calc(100% - 20px);
-            margin: 10px auto;
-            padding: 10px;
-        }
-        button {
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 4px;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .errorMessage {
-            color: red;
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Formulaire de connexion -->
-    <div id="loginForm">
-        <h1>Inventaire Poplab</h1>
-        <h2>Connexion</h2>
-        <button id="loginButton">Se connecter</button>
-    </div>
-
-    <!-- Contenu principal (Inventaire) -->
-    <div id="mainContent">
-        <h1>Bienvenue sur l'inventaire</h1>
+    <h1>Inventaire Poplab</h1>
+    
+    <!-- Section inventaire -->
+    <div id="inventorySection">
+        <h2>Inventaire</h2>
         <div id="inventory"></div>
-
-        <h2>Ajouter un article</h2>
-        <input type="text" id="newItemName" placeholder="Nom de l'article">
-        <input type="number" id="newItemQuantity" placeholder="Quantité" min="1">
-        <button id="addItemButton">Ajouter</button>
     </div>
 
+    <!-- Section pour ajouter un nouvel article -->
+    <div id="addSection">
+        <h2>Ajouter un nouvel article</h2>
+        <input type="text" id="newItemName" placeholder="Nom de l'article">
+        <button id="addButton">Ajouter</button>
+    </div>
+
+    <!-- Script principal pour gérer l'inventaire -->
     <script>
-        // Simuler un inventaire avec des articles stockés localement
-        let inventoryItems = [];
+        document.addEventListener("DOMContentLoaded", function () {
+            // Configuration de l'API JSONBin
+            const API_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6";
+            const MASTER_KEY = "$2a$10$C2IpRYDMnBVS09UziRhWsuPTWBDUAY3bghoT9Fz9cORd/9QFWGhiW";
+            const ACCESS_KEY = "$2a$10$CK7kuKd1eFHbsVtOb88Jbu4vIKYO5oTKnHfu2t0L.vVU2DP/wHcmW";
+            let inventoryItems = [];
 
-        // Fonction pour afficher l'inventaire
-        function loadInventory() {
-            const inventoryDiv = document.getElementById('inventory');
-            inventoryDiv.innerHTML = ''; // Réinitialiser l'affichage
-
-            inventoryItems.forEach(item => {
-                createItemElement(item.id, item.name, item.quantity);
-            });
-        }
-
-        // Fonction pour créer un élément d'article
-        function createItemElement(id, name, quantity) {
-            const inventoryDiv = document.getElementById('inventory');
-            const itemDiv = document.createElement('div');
-            itemDiv.className = 'item';
-            itemDiv.id = id;
-
-            const nameDisplay = document.createElement('span');
-            nameDisplay.textContent = name;
-            itemDiv.appendChild(nameDisplay);
-
-            // Bouton pour diminuer la quantité
-            const decrementButton = document.createElement('button');
-            decrementButton.textContent = '-';
-            decrementButton.onclick = () => updateQuantity(id, -1);
-            itemDiv.appendChild(decrementButton);
-
-            // Affichage de la quantité
-            const quantityDisplay = document.createElement('span');
-            quantityDisplay.textContent = ` ${quantity} `;
-            quantityDisplay.className = 'quantity';
-            itemDiv.appendChild(quantityDisplay);
-
-            // Bouton pour augmenter la quantité
-            const incrementButton = document.createElement('button');
-            incrementButton.textContent = '+';
-            incrementButton.onclick = () => updateQuantity(id, 1);
-            itemDiv.appendChild(incrementButton);
-
-            // Bouton pour supprimer un article
-            const deleteButton = document.createElement('button');
-            deleteButton.textContent = 'Supprimer';
-            deleteButton.onclick = () => deleteItem(id);
-            itemDiv.appendChild(deleteButton);
-
-            inventoryDiv.appendChild(itemDiv);
-        }
-
-        // Fonction pour ajouter un nouvel article
-        function addItem() {
-            const newItemName = document.getElementById('newItemName').value.trim();
-            const newItemQuantity = parseInt(document.getElementById('newItemQuantity').value);
-
-            if (!newItemName || isNaN(newItemQuantity) || newItemQuantity <= 0) {
-                alert("Veuillez entrer un nom et une quantité valide.");
-                return;
+            // Fonction pour charger les données depuis JSONBin
+            async function loadFromJsonBin() {
+                try {
+                    const response = await fetch(API_URL, {
+                        method: "GET",
+                        headers: {
+                            "X-Access-Key": ACCESS_KEY, // Lecture avec Access Key
+                        },
+                    });
+                    const data = await response.json();
+                    inventoryItems = data.record || [];
+                    loadInventory(); // Affiche les données dans l'interface
+                } catch (error) {
+                    console.error("Erreur lors du chargement des données :", error);
+                }
             }
 
-            const newItem = {
-                id: Date.now(), // Utilisation de l'horodatage comme identifiant unique
-                name: newItemName,
-                quantity: newItemQuantity
-            };
-
-            inventoryItems.push(newItem);
-            createItemElement(newItem.id, newItem.name, newItem.quantity);
-            document.getElementById('newItemName').value = '';
-            document.getElementById('newItemQuantity').value = '';
-        }
-
-        // Fonction pour mettre à jour la quantité d'un article
-        function updateQuantity(id, change) {
-            const item = inventoryItems.find(item => item.id === id);
-            if (!item) {
-                console.error("Article non trouvé");
-                return;
+            // Fonction pour sauvegarder les données dans JSONBin
+            async function saveToJsonBin() {
+                try {
+                    await fetch(API_URL, {
+                        method: "PUT",
+                        headers: {
+                            "Content-Type": "application/json",
+                            "X-Master-Key": MASTER_KEY, // Écriture avec Master Key
+                        },
+                        body: JSON.stringify(inventoryItems),
+                    });
+                } catch (error) {
+                    console.error("Erreur lors de la sauvegarde des données :", error);
+                }
             }
 
-            item.quantity = Math.max(0, item.quantity + change); // Empêche la quantité négative
-            loadInventory(); // Recharge l'inventaire pour mettre à jour l'affichage
-        }
+            // Fonction pour afficher les articles de l'inventaire
+            function loadInventory() {
+                const inventoryDiv = document.getElementById("inventory");
+                inventoryDiv.innerHTML = ""; // Réinitialiser l'affichage
 
-        // Fonction pour supprimer un article
-        function deleteItem(id) {
-            inventoryItems = inventoryItems.filter(item => item.id !== id);
-            loadInventory(); // Recharge l'inventaire pour mettre à jour l'affichage
-        }
+                inventoryItems.forEach((item) => {
+                    createItemElement(item.id, item.name, item.quantity);
+                });
+            }
 
-        // Lier l'événement de clic au bouton "Se connecter" pour afficher le contenu principal
-        document.getElementById("loginButton").addEventListener("click", function() {
-            document.getElementById("loginForm").style.display = "none";
-            document.getElementById("mainContent").style.display = "block";
-            loadInventory(); // Charger l'inventaire au démarrage
+            // Fonction pour créer un élément HTML pour chaque article
+            function createItemElement(id, name, quantity) {
+                const inventoryDiv = document.getElementById("inventory");
+                const itemDiv = document.createElement("div");
+                itemDiv.className = "item";
+                itemDiv.id = id;
+
+                const nameDisplay = document.createElement("span");
+                nameDisplay.textContent = name;
+                itemDiv.appendChild(nameDisplay);
+
+                // Bouton pour diminuer la quantité
+                const decrementButton = document.createElement("button");
+                decrementButton.textContent = "-";
+                decrementButton.onclick = () => updateQuantity(id, -1);
+                itemDiv.appendChild(decrementButton);
+
+                // Affichage de la quantité
+                const quantityDisplay = document.createElement("span");
+                quantityDisplay.textContent = ` ${quantity} `;
+                quantityDisplay.className = "quantity";
+                itemDiv.appendChild(quantityDisplay);
+
+                // Bouton pour augmenter la quantité
+                const incrementButton = document.createElement("button");
+                incrementButton.textContent = "+";
+                incrementButton.onclick = () => updateQuantity(id, 1);
+                itemDiv.appendChild(incrementButton);
+
+                inventoryDiv.appendChild(itemDiv);
+            }
+
+            // Fonction pour ajouter un nouvel article
+            function addItem() {
+                const newItemName = document.getElementById("newItemName").value.trim();
+                if (!newItemName) {
+                    alert("Veuillez entrer un nom pour l'article.");
+                    return;
+                }
+
+                const newItem = {
+                    id: Date.now(),
+                    name: newItemName,
+                    quantity: 1,
+                };
+
+                inventoryItems.push(newItem);
+                saveToJsonBin(); // Sauvegarde dans JSONBin
+                createItemElement(newItem.id, newItem.name, newItem.quantity);
+                document.getElementById("newItemName").value = ""; // Réinitialiser le champ texte
+            }
+
+            // Fonction pour mettre à jour la quantité d'un article
+            function updateQuantity(id, change) {
+                const item = inventoryItems.find((item) => item.id === id);
+                if (!item) {
+                    console.error("Article non trouvé");
+                    return;
+                }
+
+                item.quantity = Math.max(0, item.quantity + change); // Empêche quantité négative
+                saveToJsonBin(); // Sauvegarde dans JSONBin
+                loadInventory(); // Recharge l'affichage
+            }
+
+            // Lier les événements à l'interface
+            document.getElementById("addButton").addEventListener("click", addItem);
+
+            // Charger les données au démarrage
+            loadFromJsonBin();
         });
-
-        // Lier l'événement de clic au bouton "Ajouter" pour ajouter un nouvel article
-        document.getElementById("addItemButton").addEventListener("click", addItem);
     </script>
 </body>
 </html>
